# face-recognition-convnext

./: README.md  pyproject.toml  requirements.txt  run.sh
app/: main.py
app/model/: model.py
config/: main.yaml
config/process/: process1.yaml
data/: add_data.ipynb  adding_data.py  database.pickle  manipulate_data.py  utils.py
notebooks/: add_data.ipynb  convfacenet__err.csv  convfacenet_conv.csv  convnext-facenet-train.ipynb  data_preprocessing.ipynb
src/: main.py  manipulate_data.py  model.py
src/convfacenet/: __init__.py  face_detection.py  face_recongition.py  utils.py
src/convfacenet/face_descriptor/: __init__.py  models.py
src/convfacenet/face_detector/: __init__.py  alignment.py  detector.py  face_detector.py
src/convfacenet_train/: __init__.py  data_load.py  data_preprocessing.py  evaluation.py  generate_dataset.py  models_train.py  utils.py
tests/: test_manipulate_data.py
